fix: major changes

--- a/src/components/Separator/Separator.css
+++ b/src/components/Separator/Separator.css
@@ -26,6 +26,11 @@
   gap: 10px;
 }
 
+.view-all:hover {
+  cursor: pointer;
+  color: var(--color-grey);
+}
+
 .hashtag {
   color: var(--color-purple);
 }
