chore: major changes and new page

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -48,7 +48,7 @@
   gap: 10px;
 }
 
-.telegram:hover, .email:hover, .linkedin:hover {
+.telegram:hover, .email:hover, .linkedin:hover, .github:hover {
   cursor: pointer;
   scale: 1.5;
 }
