--- a/src/components/SmallProjectCard/SmallProjectCard.module.css
+++ b/src/components/SmallProjectCard/SmallProjectCard.module.css
@@ -2,6 +2,7 @@
   border: 1px solid var(--color-grey);
   width: 30%;
   margin-bottom: 20px;
+  align-self: flex-start;
 }
 
 .card-container .language {
