--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -31,7 +31,7 @@
 }
 
 .contact-container .contact-card .telegram,
-.email {
+.linkedin {
   display: flex;
   gap: 10px;
   word-break: break-all;
@@ -40,7 +40,7 @@
 }
 
 .telegram:hover,
-.email:hover,
+.linkedin:hover,
 .phone:hover {
   cursor: pointer;
   color: var(--color-white);
