--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   margin-top: 70px;
+  margin-bottom: 200px;
   gap: 50px;
-  height: 60vh;
 }
 
 .hero-container .hero-header {
@@ -90,5 +90,53 @@
   .hero-container {
     display: flex;
     flex-direction: column;
+    margin: 0;
+    padding: 0px 10px;
+    gap: 10px;
+  }
+
+  .hero-container .hero-header {
+    font-size: 23px;
+    padding: 0px;
+  }
+
+  .hero-container .desc {
+    font-size: 15px;
+  }
+
+  .hero-container button {
+    display: none;
+  }
+
+  .hero-container .image-container  {
+    width: 100%;
+    height: 290px;
+  }
+
+  .hero-container .image-container .image1 {
+    width: 100%;
+  }
+
+  .hero-container .image-container .dots {
+    position: absolute;
+    width: 50px;
+    bottom: 30%;
+  }
+
+  .hero-container .image-container .random-lines {
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    top: 50px;
+  }
+
+  .hero-container .image-container .working-on {
+    position: absolute;
+    font-size: 16px;
+    flex-wrap: wrap;
+    margin: 0;
+    gap: 0;
+    column-gap: 10px;
+    bottom: 0;
   }
 }
