--- a/src/components/Separator/Separator.module.css
+++ b/src/components/Separator/Separator.module.css
@@ -38,3 +38,28 @@
 .arrow {
   height: 20px;
 }
+
+
+/**************** Media Query ****************/
+
+@media (max-width: 991px) {
+  .separator-container {
+    width: 100%;
+  }
+
+  .line {
+    width: 40%;
+  }
+
+  .text {
+    font-size: 22px;
+  }
+
+  .view-all {
+    display: none;
+  }
+
+  .arrow {
+    height: 15px;
+  }
+}
