--- a/src/container/ProjectCard/ProjectCard.module.css
+++ b/src/container/ProjectCard/ProjectCard.module.css
@@ -22,3 +22,22 @@
   padding: 0;
   margin-bottom: 100px;
 }
+
+
+/************* Media Query ******************/
+
+@media (max-width: 991px) {
+  .decoration .dots, .semi-rectangle {
+    display: none;
+  }
+
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  .card-container:first-child {
+    width: 80%;
+  }
+}
