--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -52,3 +52,41 @@
   margin: 0;
   padding-bottom: 5px;
 }
+
+
+/******************** Media Query ***********************/
+
+@media (max-width: 991px) {
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .contact-container .text {
+    font-size: 18px;
+  }
+
+  .contact-container .contact-card {
+    color: var(--color-grey);
+    border: 1px solid var(--color-grey);
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    width: 250px;
+    padding: 5px 10px;
+  }
+
+  .contact-container .contact-card .message {
+    font-size: 18px;
+  }
+
+  .contact-container .contact-card .telegram,
+  .linkedin {
+    display: flex;
+    gap: 10px;
+    word-break: break-all;
+    margin: 0;
+    padding: 0;
+  }
+}
