--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -60,3 +60,50 @@
   margin-bottom: 10px;
 }
 
+
+/****************** Media Query *********************/
+
+@media (max-width: 991px) {
+  .horizontal-line {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 16px;
+    margin-bottom: 70px;
+  }
+
+  .footer-container .text .logo {
+    display: none;
+  }
+
+  .footer-container .text .title {
+    display: none;
+  }
+
+  .footer-container .images > p {
+    padding: 0;
+  }
+
+  .footer-container .images {
+    font-size: 20px;
+    font-weight: 600;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .copyright {
+    margin: 0;
+    font-size: 13px;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
