--- a/src/components/Show/Show.module.css
+++ b/src/components/Show/Show.module.css
@@ -9,3 +9,12 @@
   color: var(--color-purple);
   font-weight: 600;
 }
+
+/**************** Media Query ********************/
+
+@media (max-width: 991px) {
+  .show {
+    font-size: 20px;
+    margin-bottom: 30px;
+  }
+}
