--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -16,3 +16,25 @@
   scale: 1.05;
   cursor: pointer;
 }
+
+
+/******************* Media Query **********************/
+
+@media (max-width: 991px) {
+  .contact-images {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 80px;
+  }
+
+  .contact-images .contact-images-item {
+    font-size: 16px;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .contact-images .contact-images-item > p {
+    margin: 0;
+  }
+}
