--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -3,7 +3,6 @@
   color: var(--color-grey);
   gap: 3%;
   padding: 0;
-  margin-bottom: 100px;
   flex-wrap: wrap;
   row-gap: 20px;
   margin-bottom: 100px;
@@ -12,7 +11,14 @@
 .small-card-container {
   display: flex;
   gap: 3%;
-  margin-bottom: 100px;
   flex-wrap: wrap;
   margin-bottom: 200px;
+}
+
+/******************* Media Query **********************/
+
+@media (max-width: 991px) {
+  .small-card-container {
+    margin-bottom: 80px;
+  }
 }
