--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -86,6 +86,8 @@
   background-color: var(--color-purple);
 }
 
+/******************* Media Query ***********************/
+
 @media (max-width: 991px) {
   .hero-container {
     display: flex;
@@ -137,5 +139,32 @@
     gap: 0;
     column-gap: 10px;
     bottom: 0;
+  }
+}
+
+@media (max-width: 472px) {
+  .hero-container .image-container  {
+    width: 100%;
+    height: 360px;
+  }
+
+  .hero-container .image-container .random-lines {
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    top: 100px;
+    left: 30px;
+  }
+
+  .hero-container .image-container .working-on {
+    position: absolute;
+    font-size: 16px;
+    flex-wrap: wrap;
+    margin: 0;
+    gap: 0;
+    column-gap: 10px;
+    bottom: 0;
+    left: 10px;
+    padding: 5px 15px;
   }
 }
