--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -163,7 +163,7 @@
     margin: 0;
     gap: 0;
     column-gap: 10px;
-    bottom: 0;
+    bottom: 20px;
     left: 10px;
     padding: 5px 15px;
   }
